# paper_dispenser_zephyr

./: .gitignore  init.bat
app/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml  west.yml
app/inc/: project_info.h
app/libs/interfaces/indicator/inc/: indicator.h
app/libs/interfaces/indicator/src/: indicator.c
app/libs/interfaces/trigger/inc/: trigger.h
app/libs/interfaces/trigger/src/: trigger.c
app/src/: button_trigger.c  led_indicator.c  main.c  timer_trigger.c
